# Phishing_Stand

./: .gitignore  README.md  deploy.sh  docker-compose.yml.template  management.py
evilginx2/: Dockerfile
gophish/: config.json
management/: bootstrap.sh  pyproject.toml
management/phishing_stand/: __init__.py  __main__.py  cli.py  config.py  logger.py  state.py  utils.py
management/phishing_stand/deploy/: __init__.py  orchestrator.py
management/phishing_stand/deploy/steps/: __init__.py  base.py  certbot.py  dkim.py  docker_compose.py  finalize.py  generate_env.py  install_docker.py  system_update.py
management/phishing_stand/export/: __init__.py
management/phishing_stand/import/: __init__.py
management/phishing_stand/status/: __init__.py
management/tests/: test_config.py  test_orchestrator.py  test_steps.py
milter/: Dockerfile  gophish_milter.py
nginx/: Dockerfile  entrypoint.sh  mta-sts.txt.template  nginx.conf.template
nginx/templates/: nginx.conf.template
postfix/: Dockerfile  entrypoint.sh  header_checks  main.cf.template
postfix/templates/: KeyTable.template  SigningTable.template  TrustedHosts  header_checks  main.cf.template  opendkim.conf.template  supervisord.conf
steps/: 01_install_deps.sh  02_prepare_dirs.sh  03_configure_compose.sh  04_get_certs.sh  2_prepare_dirs.sh  3_configure_compose.sh  4_get_certs.sh  5_build_run.sh  6_print_info.sh
